[package]
name = "nexus-console"
version = "0.1.0"
edition = "2021"
description = "Tauri v2 operator console for rust-nexus (v1.1 simple-mesh integration)."

[lib]
name = "nexus_console"
path = "src/lib.rs"

[[bin]]
name = "nexus-console"
path = "src/main.rs"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
nexus-common = { path = "../../nexus-common" }
nexus-a2a = { workspace = true }
# v1.4.4 — audit chain verification in `audit_log_verify` Tauri command.
blake3 = { workspace = true }
tauri = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
# Tonic 0.14 directly (independent of the overlay's 0.10).
tonic = { version = "0.14", default-features = false, features = ["transport", "channel"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
