[package]
name = "nexus-console-ui"
version = "0.1.0"
edition = "2021"
description = "Leptos WASM frontend for the nexus-console operator UI (v1.1)."
publish = false

[[bin]]
name = "nexus-console-ui"
path = "src/main.rs"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "Event",
    "InputEvent",
    "MouseEvent",
    "KeyboardEvent",
    "EventTarget",
    "Window",
    "console",
] }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1
